@@ -49,7 +49,7 @@ if ( isset( $totals['amounts_by_currency'] ) ) {
 $pname      = get_option( 'aff_pname', AFFILIATES_PNAME );
 $encoded_id = affiliates_encode_affiliate_id( $section->get_affiliate_id() );
 $link_info  = wp_kses(
-	sprintf( __( 'You can also add <code>?%s=%s</code> to any link on %s to track referrals from your account.', 'affiliates' ), $pname, $encoded_id, esc_url( site_url() ) ),
+	sprintf( __( 'You can also add <code>?%s=%s</code> to any link on %s to track referrals from your account.', 'affiliates' ), $pname, $encoded_id, esc_url( home_url() ) ),
 	array( 'code' => array(), 'a' => array( 'href' => array() ) )
 );
 ?>
