@@ -2,6 +2,9 @@
 
 = 4.0.5 =
 * Added conditional check for registration message in registration template.
+* Replaced uses of get_bloginfo( 'url' ) with home_url().
+* Cleaned up unused code.
+* Revised the affiliates_bloginfo() function and added optional filters.
 
 = 4.0.4 =
 * Minor security improvements related to escaping output.
